--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2024"
 
 [dependencies]
 clap = {version = "^4", features = ["derive"]}
+dirs-next = "2.0.0"
+reqwest = {version = "0.12.22", features =["blocking"]}
