--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.41"
 clap = {version = "^4", features = ["derive"]}
 dirs-next = "2.0.0"
 reqwest = {version = "0.12.22", features =["blocking"]}
+serde = {version = "1.0.219", features = ["derive"]}
+serde_json = "1.0.141"
