--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,17 +1,15 @@
-name: Build and Release
+name: Build and Release (Linux only)
 
 on:
   push:
     branches:
       - main
+    tags:
+      - "v*"
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - uses: actions/checkout@v3
@@ -26,25 +24,13 @@ jobs:
       - name: Build
         run: cargo build --release
 
-      - name: Archive binaries (Linux)
-        if: matrix.platform == 'ubuntu-latest'
+      - name: Archive binary
         run: tar czf upchuk-linux.tar.gz -C target/release upchuk
 
-      - name: Archive binaries (macOS)
-        if: matrix.platform == 'macos-latest'
-        run: tar czf upchuk-macos.tar.gz -C target/release upchuk
-
-      - name: Archive binaries (Windows)
-        if: matrix.platform == 'windows-latest'
-        run: powershell Compress-Archive -Path target\release\upchuk.exe -DestinationPath upchuk-windows.zip
-
-      - name: Upload Release Assets
+      - name: Upload Release Asset
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: |
-            upchuk-linux.tar.gz
-            upchuk-macos.tar.gz
-            upchuk-windows.zip
+          files: upchuk-linux.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
